--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ License: MIT + file LICENSE
 LazyData: TRUE
 LinkingTo: Rcpp
 Imports:
-    Rcpp
+    Rcpp,
+    assertthat
 RoxygenNote: 5.0.1
 Suggests: testthat,
     knitr,
